# HyperFuzzer

./: .clang-format  .gitignore  .gitmodules  LICENSE.md  README.md  install.sh
fuzztest/: .gitignore  CMakeLists.txt  Makefile  aes_test.cpp  aes_test_ecc_safe.cpp  aes_test_ecc_unsafe.cpp  afl.c  afl.h  bootfuzzer.cpp  bootloader.cpp  coverage.cpp  coverage.h  kernel-config.sh  run.sh  secureboot.cpp  secureboot.h  secureboot_simulation.cpp  sha_test.cpp  tamper.cpp  tamper.h
fuzztest/libprop/: CMakeLists.txt  README.md  setup.sh
fuzztest/libprop/include/: ast.h  ast_adapted.h  formula.h  parse_util.h  parser.h  parser_def.h  trace.h
fuzztest/libprop/src/: formula.cpp  parser.cpp  trace.cpp
fuzztest/libprop/test/: test_HPLTLClasses.cpp  test_always_operator.cpp  test_not_operator.cpp  test_once_operator.cpp  test_parser.cpp  test_propvar.cpp  test_since_operator.cpp  test_termarray.cpp  test_vartrace.cpp  test_yesterday_operator.cpp  testprop.cpp
fw/: aes_inputs.c  aes_keyin.c  aes_pycomp.c  aes_regtest.c  aes_regtest.h  aes_regtest.sh  aes_regtest_pack.sh  aes_test.c  aes_test_ecc_safe.c  aes_test_ecc_unsafe.c  aes_testkey.c  div.c  ecall_test.c  exp_test.c  fib2.c  illegal_access_test.c  memwr.c  page_table_test.c  proc0_test.c  proc1_test.c  pyhash.c  rsa.c  rsa.h  rsa_test.c  secureboot.c  sha_pycomp.c  sha_test.c  sha_test.ihx  subb.c  testajmp.c  testall.c  testjc.c  xram.c
fw/cbmctests/: keys.c  load.c  locking.c
rom/: aes_test.v
rtl/: aes_128.v  aes_round.v  aes_table.v  aes_top.v  mem_wr.v  model_config.h  modexp.v  modexp_top.v  modmul.v  oc8051_acc.v  oc8051_alu.v  oc8051_alu_src_sel.v  oc8051_b_register.v  oc8051_cache_ram.v  oc8051_comp.v  oc8051_cxrom.v  oc8051_cxrom_debug.v  oc8051_cy_select.v  oc8051_debug_cxrom.v  oc8051_decoder.v  oc8051_defines.v  oc8051_divide.v  oc8051_dptr.v  oc8051_ecc_dec.sv  oc8051_ecc_enc.sv  oc8051_etr.v  oc8051_golden_model.v  oc8051_icache.v  oc8051_indi_addr.v  oc8051_int.v  oc8051_memarbiter.v  oc8051_memory_interface.v  oc8051_multiply.v  oc8051_page_table.v  oc8051_ports.v  oc8051_priv_lvl.v  oc8051_procarbiter.v  oc8051_psw.v  oc8051_ram_256x8_two_bist.v  oc8051_ram_64x32_dual_bist.v  (+23 more)
scripts/: aes_input.py  aes_test.v  array_property.py  bin2txt.py  bootgen.py  compare_roms.py  compile.sh  datfile  gen_rom.py  gen_seqrom.py  gen_text.py  make_secureboot  proc0_test.v  proc1_test.v  run  run_secureboot  txt2bin.py
utils/: hamming.py
